--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Volunteer Form</h1>
-    <form action="post" method="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php">
+    <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
         <fieldset>
             <legend>My Info</legend>
         <div>
@@ -18,7 +18,7 @@
             <label>last name: </label><input type="text" name="last_name_field">
         </div>
         <div>
-            <label>phone: </label><input type="phone" name="phone_field">
+            <label>phone: </label><input type="tel" name="phone_field">
         </div>
         <div>
             <label>email: </label><input type="email" name="email_field">    
@@ -33,7 +33,6 @@
                     <option value="over_18">over 18</option>
             </select>
         </div>
-        <div>
         </fieldset>
         <fieldset>
             <legend> My Availability</legend>
