--- a/index.html
+++ b/index.html
@@ -11,46 +11,38 @@
     <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
         <fieldset>
             <legend>My Info</legend>
-        <div>
-            <label>first name: </label><input type="text" name="first_name_field">    
-        </div>
-        <div>
-            <label>last name: </label><input type="text" name="last_name_field">
-        </div>
-        <div>
-            <label>phone: </label><input type="tel" name="phone_field">
-        </div>
-        <div>
-            <label>email: </label><input type="email" name="email_field">    
-        </div>
-        <div>
-            <label>Male: </label><input type="radio" name="gender_field" value="male">
-            <label>Female: </label><input type="radio" name="gender_field" value="female">
-        </div>
-        <div>
-            <label>Age: </label><select name="age_field">
-                    <option value="under_18">under 18</option>
-                    <option value="over_18">over 18</option>
-            </select>
-        </div>
+            <div><label>first name: </label><input type="text" name="first_name_field"></div>
+            <div><label>last name: </label><input type="text" name="last_name_field"></div>
+            <div><label>phone: </label><input type="tel" name="phone_field"></div>
+            <div><label>email: </label><input type="email" name="email_field"></div>
+            <div>Gender: </div>
+            <div>
+                <label>Male: </label><input type="radio" name="gender_field" value="male">
+                <label>Female: </label><input type="radio" name="gender_field" value="female">
+            </div>
+            <div>Age: </div>
+            <div>
+                <select name="age_field">
+                        <option value="under_18">under 18</option>
+                        <option value="over_18">over 18</option>
+                </select>
+            </div>
         </fieldset>
         <fieldset>
             <legend> My Availability</legend>
-        <label><strong>Days Avaliable: </strong></label><div>
-            <div><label>Monday</label><input type="checkbox" name="available_field[]" value="monday"></div>
-            <div><label>Tuesday</label><input type="checkbox" name="available_field[]" value="tueday"></div>
-            <div><label>Wednesday</label><input type="checkbox" name="available_field[]" value="wedday"></div>
-            <div><label>Thursday</label><input type="checkbox" name="available_field[]" value="thursday"></div>
-            <div><label>Friday</label><input type="checkbox" name="available_field[]" value="friday"></div>
-            <div><label>Saturday</label><input type="checkbox" name="available_field[]" value="saturday"></div>
-            <div><label>Sunday</label><input type="checkbox" name="available_field[]" value="sunday"> </div>   
-        </div>
-        <label><strong>Comments</strong></label><div>
-            <textarea name="comments_field" cols="10" rows="2"></textarea>
-        </div>
-        <div>
-            <input type="hidden" name="hidden_field" value="Anastasiya Ganus">
-        </div>
+            <h3>Days Avaliable: </h3>
+            <div>
+                <div><label>Monday</label><input type="checkbox" name="available_field[]" value="monday"></div>
+                <div><label>Tuesday</label><input type="checkbox" name="available_field[]" value="tueday"></div>
+                <div><label>Wednesday</label><input type="checkbox" name="available_field[]" value="wedday"></div>
+                <div><label>Thursday</label><input type="checkbox" name="available_field[]" value="thursday"></div>
+                <div><label>Friday</label><input type="checkbox" name="available_field[]" value="friday"></div>
+                <div><label>Saturday</label><input type="checkbox" name="available_field[]" value="saturday"></div>
+                <div><label>Sunday</label><input type="checkbox" name="available_field[]" value="sunday"> </div>   
+            </div>
+            <h3>Comments</h3>
+            <div><textarea name="comments_field" cols="10" rows="2"></textarea></div>
+            <div><input type="hidden" name="hidden_field" value="Anastasiya Ganus"></div>
         </fieldset>
         <input type="submit" name="submit_query" value="Submit Query">
     </form>
